tests/compile-error/bad_pointer_mutability.lang
fn change(let foo: *i32, var bar: *mut i32) {
    *foo = 30;
    *bar = 40;
}

fn main() -> i32 {
    // Both variables have to be var here.
    var foo: i32 = 10;
    let bar: i32 = 20;
    change(&foo, &bar);
    return foo + bar;
}
